still tryinf to fix the overflow issue, it is only visible on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -642,7 +642,7 @@ p {
     background: var(--primary-gradient);
     content: "";
     width: 100%;
-    height: 150%;
+    height: 100%;
     position: absolute;
     top: -40%;
     transform: skewY(-5deg);
